...
      }
    },
    "Author" : {
      "comment" : "EBrailleMetadataSettingsView.swift:74",
      "localizations" : {
...
      }
    },
    "Automatic Lists" : {
      "comment" : "SettingsView.swift:118",
      "localizations" : {
...
      }
    },
    "Back" : {
      "comment" : "AcknowledgementsView.swift:34",
      "localizations" : {
...
      }
    },
    "Cancel" : {
      "comment" : "BRFOptionsView.swift:148",
      "localizations" : {
...

    },
    "Complete document" : {
      "comment" : "EBrailleMetadataSettingsView.swift:99",
      "localizations" : {
...

    },
    "Continue to Library" : {
      "comment" : "WelcomeView.swift:48",
      "localizations" : {
...

    },
    "Copyright date" : {
      "comment" : "EBrailleMetadataSettingsView.swift:90",
      "localizations" : {
...

    },
    "Create" : {
      "comment" : "NewDocumentView.swift:54",
      "localizations" : {
...
      "extractionState" : "manual"
    },
    "Delete" : {
      "comment" : "LibraryView.swift:328",
      "localizations" : {
...
      }
    },
    "Document name" : {

    },
...

    },
    "Done" : {
      "comment" : "MarkdownReferenceView.swift:42",
      "localizations" : {
...

    },
    "Edit defaults" : {
      "comment" : "SettingsView.swift:213",
      "extractionState" : "stale",
...

    },
    "Education level" : {
      "comment" : "EBrailleMetadataSettingsView.swift:145",
      "localizations" : {
...

    },
    "Explore Welcome Document" : {
      "comment" : "WelcomeView.swift:40",
      "localizations" : {
...
      }
    },
    "File actions" : {
      "comment" : "EditorView.swift:537",
      "localizations" : {
...
      }
    },
    "Full" : {
      "comment" : "AppSettings.swift:99",
      "localizations" : {
...
      }
    },
    "ghostWriter Markdown" : {
      "comment" : "LibraryView.swift:375",
      "localizations" : {
...
      "extractionState" : "manual"
    },
    "Import document" : {
      "comment" : "LibraryView.swift:430",
      "localizations" : {
...

    },
    "Jump" : {
      "comment" : "EditorView.swift:304",
      "localizations" : {
...
      }
    },
    "Jump to Line…" : {
      "comment" : "EditorView.swift:496",
      "localizations" : {
...
      }
    },
    "Light" : {
      "comment" : "AppSettings.swift:53",
      "localizations" : {
...
      }
    },
    "Line Does Not Exist" : {
      "comment" : "LineNavigation.swift:20",
      "localizations" : {
...
      }
    },
    "Line number" : {
      "comment" : "EditorView.swift:299",
      "localizations" : {
...
      }
    },
    "Move" : {
      "comment" : "LibraryView.swift:670",
      "localizations" : {
...
      }
    },
    "New document" : {
      "comment" : "LibraryView.swift:403",
      "localizations" : {
...
      }
    },
    "New Folder" : {
      "comment" : "LibraryView.swift:412",
      "localizations" : {
...
      }
    },
    "No Markdown editing announcements." : {
      "comment" : "AppSettings.swift:106",
      "localizations" : {
...
      }
    },
    "Off" : {
      "comment" : "AppSettings.swift:97",
      "localizations" : {
...
      }
    },
    "Pin" : {
      "comment" : "LibraryView.swift:775",
      "localizations" : {
...
      }
    },
    "Produced by" : {
      "comment" : "EBrailleMetadataSettingsView.swift:82",
      "localizations" : {
...
      }
    },
    "Rename" : {
      "comment" : "EditorView.swift:289",
      "localizations" : {
...
      }
    },
    "Rename Document" : {
      "comment" : "EditorView.swift:283",
      "localizations" : {
...
      }
    },
    "Rename Folder" : {
      "comment" : "LibraryView.swift:338",
      "extractionState" : "stale",
...

    },
    "Search" : {
      "comment" : "LibraryView.swift:503",
      "localizations" : {
...

    },
    "Settings" : {
      "comment" : "LibraryView.swift:386",
      "localizations" : {
...
      }
    },
    "Share" : {
      "comment" : "EditorView.swift:525",
      "localizations" : {
...

    },
    "Verbosity" : {
      "comment" : "SettingsView.swift:149",
      "extractionState" : "stale",
...
      }
    },
    "Welcome to ghostWriter Markdown" : {
      "comment" : "WelcomeView.swift:20",
      "localizations" : {
...
