...
        let date: Date
    }

    static let supportOptions: [SupportOption] = [
        SupportOption(
            productID: "com.marconius.ghostwriter.support.littleBoo",
            fallbackName: "Little Boo"
        ),
        SupportOption(
            productID: "com.marconius.ghostwriter.support.bigBoo",
            fallbackName: "Big Boo"
        ),
        SupportOption(
...
